operational-modernization/daytrader/twas-container-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: daytrader2ee5
  name: daytrader2ee5
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: daytrader2ee5
