operational-modernization/daytrader/twas-container-deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: daytrader2ee5
  name: daytrader2ee5
spec:
  path:
    /daytrader
  port:
    targetPort: http
  to:
    kind: Service
    name: daytrader2ee5
    weight: 100
